<resources>
    <string name="app_name">AndieGraph</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="preference_category_ui">User Interface</string>
    <string name="preference_category_roms">ROM</string>
    <string name="progress_searching">Searching...</string>

    <string name="text_loading_rom">Loading ROM...</string>

    <string name="button_support">Support</string>
    <string name="button_donate">Donate</string>

    <string name="dialog_about">Version: %s\nCopyright (c) 2011\nby Doug Melton\nhttp://dgmltn.com\nhttp://twitter.com/dgmltn\n\nPorted from AlmostTI\nby Marat Fayzullin\nhttp://fms.komkon.org</string>
    <string name="dialog_romz">&lt;font color=\"white\"&gt;No ROM image was found on your SD card. A ROM (Read Only Memory) image file contains the original software (written by Texas Instruments) that runs the operating system of this calculator. At the request of Texas Instruments, a ROM image file is no longer included with this app. It\'s illegal to distribute these ROM image files without permission because they contain copyrighted code.&lt;/font&gt;&lt;br/&gt;&lt;br/&gt;&lt;font color=\"red\"&gt;Do not ask us for ROM images. TI has specifically requested that we do not distribute them. The only way to legally obtain a ROM image is to download it from your own calculator.&lt;/font&gt;&lt;br/&gt;&lt;br/&gt;&lt;font color=\"white\"&gt;That procedure is described here: http://supware.net/roms&lt;br/&gt;&lt;br/&gt;Once you have obtained this ROM image, copy it to your SD card with the name %s.&lt;/font&gt;</string>
    <string name="crouton_rom_not_found">No ROM was found on your SD card. &lt;a href=\"http://dgmltn.com/roms\"&gt;help&lt;/a&gt;</string>

    <string name="hint_support_request_question">Question</string>

    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>

    <string name="model_ti82">TI-82</string>
    <string name="model_ti83">TI-83</string>
    <string name="model_ti83p">TI-83+</string>
    <string name="model_ti83se">TI-83+SE</string>
    <string name="model_ti85">TI-85</string>
    <string name="model_ti86">TI-86</string>

    <string name="preference_haptic_feedback_summary">Vibrate when button pressed?</string>
    <string name="preference_haptic_feedback_title">Haptic Feedback</string>
    <string name="preference_wake_lock_summary">Keep phone screen on until calculator goes to sleep?</string>
    <string name="preference_wake_lock_title">Wake Lock</string>
    <string name="preference_zoom_summary">Remove stylish border around edge of screen for bigger buttons?</string>
    <string name="preference_zoom_title">Zoom</string>

    <string name="text_rom_name">TI8*.ROM</string>
    <string name="text_support_request">Support Request: </string>
    <string name="text_searching_for_x_rom">Searching for %1$s...</string>
    <string name="text_support_request_intro">Please ask your question below. Before asking a question, please see if it is already answered on the <a href="http://dougmelton.com/android/andie-graph/#faqs">Andie Graph FAQs</a>.</string>
    <string name="text_unknown">unknown</string>

    <string name="toast_cannot_open_url">Cannot open URL</string>
    <string name="toast_cannot_send_email">Cannot send email</string>
</resources>
